# clash-vscode

./: .gitignore  .vscodeignore  ARCHITECTURE.md  CHANGELOG.md  CHECK_CRASH.md  DEBUG_EXTENSION_HOST.md  DESIGN.md  KNOWN_WARNINGS.md  LICENSE  README.md  ROADMAP.md  TESTING.md  eslint.config.js  flake.nix  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/architecture/: clash-manifests.md  directory-structure.md  nextpnr-integration.md  overview.md  synthesis-pipeline.md
book/src/dev/: debugging.md  known-warnings.md  setup.md  testing.md
book/src/guide/: circuit-diagrams.md  code-actions.md  commands.md  configuration.md  getting-started.md  timing-analysis.md
docs/: CIRCUIT_DIAGRAMS.md  CLASH_COMMAND_CONFIGURATION.md  CLASH_EXECUTABLE_DISCOVERY.md  CLASH_MANIFEST.md  CRASH_FIX.md  DEBUG_CRASHES.md  DIGITALJS_TROUBLESHOOTING.md  DIGITALJS_VISUALIZATION.md  DIRECTORY_STRUCTURE.md  MULTI_FILE_VERILOG.md  NEXTPNR_INTEGRATION.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE7_COMPLETE.md  TESTING_GUIDE.md  TESTING_NIXOS.md  TESTING_PHASE5.md  TESTING_PHASE6.md  TEST_STATUS.md  TIMING_ANALYSIS.md  YOSYS_INTEGRATION_RESEARCH.md
scripts/: test.sh
src/: clash-code-actions.ts  clash-compiler.ts  clash-manifest-parser.ts  clash-manifest-types.ts  clash-types.ts  code-generator.ts  diagram-viewer.ts  extension.ts  file-logger.ts  function-detector.ts  haskell-functions-tree.ts  hls-client.ts  nextpnr-runner.ts  nextpnr-types.ts  pipeline-cache.ts  run-history-tree.ts  run-loader.ts  synthesis-results-panel.ts  synthesis-results-tree.ts  synthesis-settings-panel.ts  synthesis-targets.ts  tool-provider.ts  toolchain.ts  type-analyzer.ts  types.ts  yosys-runner.ts  yosys-types.ts
src/test/: README.md  runTest.ts
src/test/suite/: clash-compiler.test.ts  code-actions.test.ts  code-generator.test.ts  function-detector.test.ts  hls-client.test.ts  index.ts  integration.test.ts  internal-components.test.ts  nextpnr-runner.test.ts  pipeline-features.test.ts  platform-tools.test.ts  pnr-targets.test.ts  sdc-parser.test.ts  (+6 more)
test-project/: .gitignore  README.md  flake.nix  simple.cabal
test-project/.test-synth/: ClashSynth_MyFunc.hs  ClashSynth_PlusSigned.hs  ClashSynth_TestSynth.hs  Test_AddSigned.hs  Test_MyComplexFunction.hs  Test_TestFunc.hs  Test_TopEntity.hs
test-project/src/Example/: Project.hs
test-project/tests/: doctests.hs  unittests.hs
test-project/tests/Tests/Example/: Project.hs
